What's new...

Mar 17/2020 : JF 20.1.0 released
  - jfDVR/0.6
    - fix : use 24 hour format in filenames

Mar 10/2020 : JF 20.0.0 released
  - fix : mac support has been fixed
    - note : the icns look corrupted but using Finder or Preview they look good
      - could be a MacOS bug
  - jfPaint/0.24
    - new : create MacOS .dmg

Mar 9/2020 : JF 19.6.0 released
  - jfDVR/0.5
    - fix : loading ffmpeg libraries
    - new : uses JDK14-ZGC which results in lower virtual memory usage
      - requires Win10-1803 or WinServer 2019 or better

Mar 3/2020 : JF 19.5.0 released
  - jfPhone/1.18
    - fix : audio delay when switching lines

Mar 2/2020 : JF 19.4.0 released
  - jfDVR/0.4
    - new : preview image and view motion value thru web UI
    - fix : file size logic was incorrect

Mar 1/2020 : JF 19.3.0 released
  - jfDVR/0.3
    - new : just changing camera options does not stop/start the camera
            (which was causing the app to crash if too many were restarted quickly)
    - fix : was not tracking folder storage properly

Feb 28/2020 : JF 19.2.0 released
  - jfDVR/0.2
    - fix : run in one process or system runs out of virtual memory
  - jfPasswords/0.22
    - fix : msi package was missing DLLs

Jan 30/2020 : JF 19.1.0 released
  - jfBackup/0.10
    - fix restore job not detecting drive is empty

Jan 7/2020 : JF 19.0.0 released
  - jfDVR/0.1
    - after 6 long months of development it's finally ready
    - performance tuning took the longest - it was not possible until at least JDK12 or better
      - I tried to make a better JVM (jfdk.sf.net) but it turned out to be unneccessary
      - graalVM is just missing too many features
    - out performs iSpy with better quality (but not as many features yet)
    - runs as a service so it's always running even after server reboots

Jan 2/2020 : JF 18.9.0 released
  - webui
    - fix JSON stringify()
  - jfBackup/0.9
    - add email notification

Dec 30/2019 : JF 18.8.0 released
  - XML loader now supports UTF-8